--- a/core/pom.xml
+++ b/core/pom.xml
@@ -4,15 +4,15 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>be.ida-mediafoundry.jetpack</groupId>
-        <artifactId>tool-name</artifactId>
+        <artifactId>component-insight</artifactId>
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>tool-name.core</artifactId>
+    <artifactId>component-insight.core</artifactId>
     <packaging>bundle</packaging>
-    <name>Jetpack - Tool Name - Core</name>
-    <description>Core bundle for Jetpack Tool Name</description>
+    <name>Jetpack - Component Insight - Core</name>
+    <description>Core bundle for Jetpack Component insight</description>
 
     <build>
         <testResources>
@@ -47,12 +47,12 @@
                         <!-- Import any version of javax.inject, to allow running on multiple versions of AEM -->
                         <Import-Package>javax.inject;version=0.0.0,*</Import-Package>
                         <Sling-Model-Packages>
-                            be.ida-mediafoundry.jetpack.toolname.models,
+                            be.ida-mediafoundry.jetpack.componentinsight.models,
                         </Sling-Model-Packages>
                         <Export-Package>
-                            be.ida-mediafoundry.jetpack.toolname.servlets,
-                            be.ida-mediafoundry.jetpack.toolname.services,
-                            be.ida-mediafoundry.jetpack.toolname.models,
+                            be.ida-mediafoundry.jetpack.componentinsight.servlets,
+                            be.ida-mediafoundry.jetpack.componentinsight.services,
+                            be.ida-mediafoundry.jetpack.componentinsight.models,
                         </Export-Package>
                         <Service-Component>OSGI-INF/*</Service-Component>
                     </instructions>
