--- a/pom.xml
+++ b/pom.xml
@@ -2,12 +2,12 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>be.ida-mediafoundry.jetpack</groupId>
-    <artifactId>tool-name</artifactId>
+    <artifactId>component-insight</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0</version>
 
-    <name>Jetpack - Tool Name</name>
-    <description>Jetpack Tool Name.</description>
+    <name>Jetpack - Component Insight</name>
+    <description>Jetpack Component Insight.</description>
 
     <organization>
         <name>iDA Mediafoundry</name>
