--- a/core/pom.xml
+++ b/core/pom.xml
@@ -3,7 +3,7 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <parent>
-        <groupId>be.ida-mediafoundry.jetpack</groupId>
+        <groupId>be.ida_mediafoundry.jetpack</groupId>
         <artifactId>component-insight</artifactId>
         <version>1.0.0</version>
         <relativePath>../pom.xml</relativePath>
@@ -47,12 +47,12 @@
                         <!-- Import any version of javax.inject, to allow running on multiple versions of AEM -->
                         <Import-Package>javax.inject;version=0.0.0,*</Import-Package>
                         <Sling-Model-Packages>
-                            be.ida-mediafoundry.jetpack.componentinsight.models,
+                            be.ida_mediafoundry.jetpack.componentinsight.models,
                         </Sling-Model-Packages>
                         <Export-Package>
-                            be.ida-mediafoundry.jetpack.componentinsight.servlets,
-                            be.ida-mediafoundry.jetpack.componentinsight.services,
-                            be.ida-mediafoundry.jetpack.componentinsight.models,
+                            be.ida_mediafoundry.jetpack.componentinsight.servlets,
+                            be.ida_mediafoundry.jetpack.componentinsight.services,
+                            be.ida_mediafoundry.jetpack.componentinsight.models,
                         </Export-Package>
                         <Service-Component>OSGI-INF/*</Service-Component>
                     </instructions>
