--- a/core/pom.xml
+++ b/core/pom.xml
@@ -47,12 +47,12 @@
                         <!-- Import any version of javax.inject, to allow running on multiple versions of AEM -->
                         <Import-Package>javax.inject;version=0.0.0,*</Import-Package>
                         <Sling-Model-Packages>
-                            be.ida_mediafoundry.jetpack.componentinsight.models,
+                            be.ida_mediafoundry.jetpack.componentinsight.model,
                         </Sling-Model-Packages>
                         <Export-Package>
                             be.ida_mediafoundry.jetpack.componentinsight.servlets,
                             be.ida_mediafoundry.jetpack.componentinsight.services,
-                            be.ida_mediafoundry.jetpack.componentinsight.models,
+                            be.ida_mediafoundry.jetpack.componentinsight.model,
                         </Export-Package>
                         <Service-Component>OSGI-INF/*</Service-Component>
                     </instructions>
