--- a/pom.xml
+++ b/pom.xml
@@ -511,32 +511,6 @@
                 <scope>provided</scope>
             </dependency>
 
-            <!-- Groovy Console -->
-            <dependency>
-                <groupId>com.icfolson.aem.groovy.console</groupId>
-                <artifactId>aem-groovy-console</artifactId>
-                <version>13.0.0</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>org.codehaus.groovy</groupId>
-                <artifactId>groovy-all</artifactId>
-                <version>2.4.15</version>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <artifactId>acs-aem-commons-bundle</artifactId>
-                <version>4.0.0</version>
-                <groupId>com.adobe.acs</groupId>
-                <scope>provided</scope>
-            </dependency>
-            <dependency>
-                <groupId>be.ida_mediafoundry.jetpack</groupId>
-                <artifactId>carve.core</artifactId>
-                <version>1.0.0</version>
-                <scope>provided</scope>
-            </dependency>
-
             <!-- Commons Collections -->
             <dependency>
                 <groupId>org.apache.commons</groupId>
@@ -561,7 +535,6 @@
                 <groupId>org.slf4j</groupId>
                 <artifactId>slf4j-simple</artifactId>
                 <version>1.5.11</version>
-                <scope>test</scope>
             </dependency>
             <dependency>
                 <groupId>org.mockito</groupId>
@@ -577,9 +550,22 @@
             </dependency>
             <dependency>
                 <groupId>io.wcm</groupId>
-                <artifactId>io.wcm.testing.aem-mock</artifactId>
-                <version>2.3.2</version>
+                <artifactId>io.wcm.testing.aem-mock.junit4</artifactId>
+                <version>2.6.0</version>
                 <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.sling</groupId>
+                <artifactId>org.apache.sling.testing.sling-mock-oak</artifactId>
+                <version>2.1.6</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
+                <groupId>io.wcm.maven</groupId>
+                <artifactId>io.wcm.maven.aem-dependencies</artifactId>
+                <version>6.4.4.0000</version>
+                <type>pom</type>
+                <scope>import</scope>
             </dependency>
             <dependency>
                 <groupId>org.assertj</groupId>
