--- a/ui.apps/pom.xml
+++ b/ui.apps/pom.xml
@@ -8,7 +8,7 @@
     <parent>
         <groupId>be.ida_mediafoundry.jetpack</groupId>
         <artifactId>component-insight</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
