--- a/core/pom.xml
+++ b/core/pom.xml
@@ -44,12 +44,17 @@
                 <configuration>
                     <exportScr>true</exportScr>
                     <instructions>
+                        <!-- Enable processing of OSGI DS component annotations -->
+                        <_dsannotations>*</_dsannotations>
+                        <!-- Enable processing of OSGI metatype annotations -->
+                        <_metatypeannotations>*</_metatypeannotations>
                         <!-- Import any version of javax.inject, to allow running on multiple versions of AEM -->
                         <Import-Package>javax.inject;version=0.0.0,*</Import-Package>
                         <Sling-Model-Packages>
                             be.ida_mediafoundry.jetpack.componentinsight.model,
                         </Sling-Model-Packages>
                         <Export-Package>
+                            be.ida_mediafoundry.jetpack.componentinsight.repository,
                             be.ida_mediafoundry.jetpack.componentinsight.services,
                             be.ida_mediafoundry.jetpack.componentinsight.model,
                         </Export-Package>
